Switch shell to zsh

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,10 @@
 # Global settings
 
-set -g default-command /usr/bin/fish
+# Make it easy to switch panes without switching back when an arrow
+# key is pressed. Affects resizing a pane though.
+set-option -g repeat-time 0
+
+set -g default-command /usr/bin/zsh
 # run-shell '~/.tmux/plugins/tmux-onedark-theme/tmux-onedark-theme.tmux'
 
 set -g history-limit 50000
