Add keybindings for creating, switching, moving tabs

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,6 +26,17 @@ bind C-a send-prefix
 bind | split-window -h
 bind - split-window -v
 
+# new tab
+bind -n C-t new-window -a
+
+# next/prev tab
+bind -n S-left prev
+bind -n S-right next
+
+# swap left/right tab
+bind -n S-M-left swap-window -t -1
+bind -n S-M-right swap-window -t +1
+
 #setw -g mode-mouse off
 #set -g mouse-select-pane on
 #set -g mouse-resize-pane off
