Cleanup. Add tmux-resurrection

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,23 +1,24 @@
 # Global settings
 
-# Make it easy to switch panes without switching back when an arrow
-# key is pressed. Affects resizing a pane though.
-set-option -g repeat-time 0
-
-set -g default-command /usr/bin/zsh
-# run-shell '~/.tmux/plugins/tmux-onedark-theme/tmux-onedark-theme.tmux'
-
-set -g history-limit 50000
-
-# delay when sending commands
-set -sg escape-time 1
+# change PREFIX to CTRL-A
+set -g prefix C-a
 
 # shortcut to reload tmux conf
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# change PREFIX to CTRL-A
-set -g prefix C-a
+# shortcut to reload tmux conf
+unbind r
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+# Make it easy to switch panes without switching back when an arrow
+# key is pressed. Affects resizing a pane though.
+set-option -g repeat-time 0
+
+set -g default-command /usr/bin/zsh
+set -g history-limit 50000
+
+# delay when sending commands
+set -sg escape-time 1
 
 # send CTRL-a to app by pressing it twice
 bind C-a send-prefix
@@ -25,9 +26,6 @@ bind C-a send-prefix
 # set vertical and horizontal split keys
 bind | split-window -h
 bind - split-window -v
-
-# new tab
-bind -n C-t new-window -a
 
 # next/prev tab
 bind -n S-left prev
@@ -37,40 +35,14 @@ bind -n S-right next
 bind -n S-M-left swap-window -t -1
 bind -n S-M-right swap-window -t +1
 
-#setw -g mode-mouse off
-#set -g mouse-select-pane on
-#set -g mouse-resize-pane off
-#set -g mouse-select-window on
+bind m set -g mouse on
+bind M set -g mouse off
 
-set -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',alacritty:RGB'
 
 # change status bar colors
 set -g status-fg white
-# set -g status-bg black
-
-# set style of regular windows
-# setw -g window-status-fg cyan
-# setw -g window-status-bg default
-# setw -g window-status-attr dim
-
-# set style of active window
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
-
-# set -g pane-border-fg green
-# set -g pane-active-border-fg red
-
-# set style of command bar
-set -g message-fg white
-# set -g message-bg black
-set -g message-attr bright
-
-# window options
-
-# monitor activity in other window sessions
-setw -g monitor-activity on
-set -g visual-activity on
+set -g status-bg colour34
 
 setw -g mode-keys vi
 
@@ -79,8 +51,10 @@ bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
 
 bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
-# run-shell "powerline-daemon -q"
-# source "/usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf"
-
 set-option -g allow-rename off
+
+set-option -g focus-events on
+
+# Setup temux resurrection
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
