--- a/tmux.conf
+++ b/tmux.conf
@@ -56,5 +56,9 @@ set-option -g allow-rename off
 set-option -g focus-events on
 
 # Setup temux resurrection
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+run '~/.tmux/plugins/tpm/tpm'
+
 
