Use vim bindings for moving between panes. Turn on mouse support.

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,9 +7,6 @@ set -g prefix C-a
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# shortcut to reload tmux conf
-unbind r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # Make it easy to switch panes without switching back when an arrow
 # key is pressed. Affects resizing a pane though.
 set-option -g repeat-time 0
@@ -35,14 +32,30 @@ bind -n S-right next
 bind -n S-M-left swap-window -t -1
 bind -n S-M-right swap-window -t +1
 
+set -g mouse on
 bind m set -g mouse on
 bind M set -g mouse off
 
 set-option -sa terminal-overrides ',alacritty:RGB'
 
+# Move around tmux splits with vim like syntax
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# A nice red for the active panel
+set-option -g pane-border-style fg="#00BEBE"
+
 # change status bar colors
-set -g status-fg white
-set -g status-bg colour34
+# set -g status-fg white
+# set -g status-fg colour147
+# set -g status-fg colour75
+# set -g status-fg colour81
+# set -g status-fg colour153
+set -g status-fg colour189
+# set -g status-bg colour34
+set -g status-bg colour240
 
 setw -g mode-keys vi
 
@@ -58,7 +71,9 @@ set-option -g focus-events on
 # Setup temux resurrection
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 run '~/.tmux/plugins/tpm/tpm'
 
-
+# unbind r
+# set -g @resurrect-restore 'r' # use c-a c-r
